--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,18 @@
 </head>
 <body>
 Home Page
+<br>
+<br>
+<br>
+<br>
+<a href="assignment/index.html">Assignment Main Page</a>
+<br>
+<br>
+<a href="project/index.html">Project Main Page</a>
+<br>
+<br>
+<a href="/hello">Hello</a>
+<br>
+<br>
 </body>
 </html>
