--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@ Home Page
 <a href="project/index.html">Project Main Page</a>
 <br>
 <br>
+<a href="experiment/index.html">Experiments Main Page ...</a>
+<br>
+<br>
 <a href="/hello">Hello</a>
 <br>
 <br>
