navigation links added

--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -64,64 +64,10 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Forms</h1>
             <ul class="nav nav-tabs">
-                <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
-                <li role="presentation"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation" ><a href="forms.html">Forms</a></li>
+                <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
             </ul>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th>Form Name</th>
-                    <th>Action</th>
-                    <th>&nbsp;</th>
-                </tr>
-                </thead>
-                <tr>
-                    <td><input class="form-control" type="text" name="UserName" placeholder="UserName"/></td>
-                    </td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-ok"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-plus"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Registration Form</td>
-                    <td>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>Contact List</td>
-                    <td>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>To Do List</td>
-                    <td>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
+
 
 
 
