--- a/public/assignment/login.html
+++ b/public/assignment/login.html
@@ -61,7 +61,7 @@
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Register</h1>
+            <h1 class="page-header">Login</h1>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="inputusername" class="col-sm-2 control-label">Username</label>
