--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -40,9 +40,7 @@
                 <li><a href="#">Username</a></li>
                 <li><a href="#">Logout</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
-            </form>
+
         </div>
     </div>
 </nav>
@@ -59,7 +57,7 @@
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-            <h1 class="page-header">Register</h1>
+            <h1 class="page-header">Profile</h1>
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="inputusername" class="col-sm-2 control-label">Username</label>
