--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -66,6 +66,61 @@
                 <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
             </ul>
 
+            <form class="form-horizontal">
+                <br class="form-group">
+                    <label for="inputfirstname" class="col-sm-2 control-label">First Name:</label>
+                <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputfirstname" placeholder="First Name">
+                    </div>
+
+                <br class="form-group">
+                    <label for="inputlastname" class="col-sm-2 control-label">Last Name:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="inputlastname" placeholder="Last Name">
+                    </div>
+
+                <div class="form-group">
+                    <label for="inputdob" class="col-sm-2 control-label">Date of Birth:</label>
+                    <div class="col-sm-10">
+                        <input type="date" class="form-control" id="inputdob">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Gender:</label>
+                    <div class="col-sm-10">
+                        <select>
+                            <option value="Female">Female</option>
+                            <option value="Male">Male</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">License Agreement:</label>
+                    <div class="col-sm-10">
+                        <input id="yes" type="radio" name="license"/> <label for="yes">Yes</label>
+                        <label><input type="radio" name="license"/> No</label>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Add New Field:</label>
+                    <div class="col-sm-10">
+                        <select>
+                            <option name="text">Single Line Text</option>
+                            <option name="date">Date</option>
+                            <option name="dropdown">DropDown</option>
+                            <option name="checkbox">CheckBox</option>
+                            <option name="radio">Radio Button</option>
+                            <option name="paragraph">Paragraph</option>
+                        </select>
+                    </div>
+                </div>
+
+
+
+            </form>
 
 
 
