--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -61,14 +61,14 @@
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Admin</h1>
             <h2 class="page-header">Users</h2>
-            <table class="table table-striped">
+            <table class="table table-stripped">
                 <thead>
                 <tr>
                     <th>UserName</th>
                     <th>Password</th>
                     <th>Role</th>
                     <th>Action</th>
-                    <th>&nbsp;</th>
+
                 </tr>
                 </thead>
                 <tr>
