--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -66,12 +66,12 @@
                 <li role="presentation"><a href="form-fields.html">Fields</a></li>
             </ul>
             <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped table-bordered">
                 <thead>
                 <tr>
                     <th>Form Name</th>
                     <th>Action</th>
-                    <th>&nbsp;</th>
+
                 </tr>
                 </thead>
                 <tr>
