edits in each page

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -33,14 +33,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
 
         </div>
@@ -51,17 +51,17 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="admin.html">Admin</a></li>
+                <li class="active"><a href="admin.html">Admin</a></li>
                 <li><a href="forms.html">Forms</a></li>
             </ul>
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <h1 class="page-header">Admin</h1>
-            <h2 class="page-header">Users</h2>
-            <table class="table table-stripped">
+            <h3 class="page-header">Users</h3>
+            <table class="table table-stripped table-bordered">
                 <thead>
                 <tr>
                     <th>UserName</th>
@@ -95,10 +95,10 @@
                     <td>Wonderland</td>
                     <td>User</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-danger">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
@@ -108,10 +108,10 @@
                     <td>Marley</td>
                     <td>Admin</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-danger">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
@@ -121,10 +121,10 @@
                     <td>Steele</td>
                     <td>Faculty</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-danger">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
@@ -134,10 +134,10 @@
                     <td>Boyle</td>
                     <td>Student</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-danger">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
