--- a/public/assignment/form-fields.html
+++ b/public/assignment/form-fields.html
@@ -33,14 +33,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
 
         </div>
@@ -51,10 +51,10 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="forms.html">Forms</a></li>
+                <li class="active"><a href="forms.html">Forms</a></li>
             </ul>
 
         </div>
@@ -75,10 +75,10 @@
                 <div class="col-sm-12">
                         <input type="text"  id="inputfirstname" placeholder="First Name">
                          <div class="pull-right">
-                         <span class="glyphicon glyphicon-pencil"></span>
-                         <span class="glyphicon glyphicon-plus"></span>
-                         <span class="glyphicon glyphicon-remove"></span>
-                         <span class="glyphicon glyphicon-align-justify"></span>
+                         <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                         <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                         <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                         <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                          </div>
                     </div>
                 </div>
@@ -89,11 +89,11 @@
                     <label for="inputlastname">Last Name:</label></div>
                     <div class="col-sm-12">
                         <input type="text"  id="inputlastname" placeholder="Last Name">
-                        <div class="pull-right">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                        <div class= "pull-right">
+                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                         </div>
                     </div>
                 </div>
@@ -105,10 +105,10 @@
                     <div class="col-sm-12">
                         <input type="date"  id="inputdob">
                         <div class="pull-right">
-                        <span class="glyphicon glyphicon-pencil"></span>
-                        <span class="glyphicon glyphicon-plus"></span>
-                        <span class="glyphicon glyphicon-remove"></span>
-                        <span class="glyphicon glyphicon-align-justify"></span>
+                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                         </div>
                     </div>
                 </div>
@@ -122,10 +122,10 @@
                             <option value="Male">Male</option>
                         </select>
                         <div class="pull-right">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span class="glyphicon glyphicon-plus"></span>
-                            <span class="glyphicon glyphicon-remove"></span>
-                            <span class="glyphicon glyphicon-align-justify"></span>
+                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                         </div>
                     </div>
                 </div>
@@ -137,10 +137,10 @@
                     <div class="col-sm-12">
                         <label><input type="checkbox" name="role"/>User</label>
                         <div class="pull-right">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span class="glyphicon glyphicon-plus"></span>
-                            <span class="glyphicon glyphicon-remove"></span>
-                            <span class="glyphicon glyphicon-align-justify"></span>
+                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                         </div>
                         </div>
                     <div class="col-sm-12">
@@ -160,10 +160,10 @@
                         <input id="yes" type="radio" name="license"/> <label for="yes">Yes</label>
                         <label><input type="radio" name="license"/> No</label>
                         <div class="pull-right">
-                            <span class="glyphicon glyphicon-pencil"></span>
-                            <span class="glyphicon glyphicon-plus"></span>
-                            <span class="glyphicon glyphicon-remove"></span>
-                            <span class="glyphicon glyphicon-align-justify"></span>
+                            <span class="glyphicon glyphicon-pencil btn btn-success"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
+                            <span class="glyphicon glyphicon-remove btn btn-danger"></span>
+                            <span class="glyphicon glyphicon-align-justify btn btn-warning"></span>
                         </div>
                     </div>
                 </div>
@@ -183,7 +183,7 @@
                         </select>
                         <div class="pull-right">
 
-                            <span class="glyphicon glyphicon-plus"></span>
+                            <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                          </div>
                     </div>
                 </div>
