--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -33,14 +33,14 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="register.html">Register</a></li>
                 <li><a href="login.html">Login</a></li>
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
 
         </div>
@@ -51,10 +51,10 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="home.html">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
-                <li><a href="forms.html">Forms</a></li>
+                <li class="active"><a href="forms.html">Forms</a></li>
             </ul>
 
         </div>
@@ -90,10 +90,10 @@
                 <tr>
                     <td>Registration Form</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-success">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-primary">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
@@ -101,10 +101,10 @@
                 <tr>
                     <td>Contact List</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-success">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-primary">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
@@ -112,10 +112,10 @@
                 <tr>
                     <td>To Do List</td>
                     <td>
-                        <a href="#">
+                        <a href="#" class="btn btn-success">
                             <scan class="glyphicon glyphicon-pencil"></scan>
                         </a>
-                        <a href="#">
+                        <a href="#" class="btn btn-primary">
                             <scan class="glyphicon glyphicon-remove"></scan>
                         </a>
                     </td>
