--- a/public/assignment/profile.html
+++ b/public/assignment/profile.html
@@ -33,12 +33,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Project name</a>
+            <a class="navbar-brand" href="#">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Username</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="profile.html">Username</a></li>
+                <li><a href="login.html">Logout</a></li>
             </ul>
 
         </div>
@@ -49,8 +49,8 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li class="active"><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
-                <li><a href="profile.html">Profile</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li class="active"><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
                 <li><a href="forms.html">Forms</a></li>
             </ul>
@@ -73,10 +73,18 @@
                     </div>
                 </div>
 
+
                 <div class="form-group">
-                    <label for="inputPassword4" class="col-sm-2 control-label">Verify Password</label>
+                    <label for="inputfirst" class="col-sm-2 control-label">First Name</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                        <input type="text" class="form-control" id="inputfirst" placeholder="First Name">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="inputlast" class="col-sm-2 control-label">Last Name</label>
+                    <div class="col-sm-10">
+                        <input type="password" class="form-control" id="inputlast" placeholder="Last Name">
                     </div>
                 </div>
 
@@ -89,7 +97,7 @@
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-default">Update</button>
+                        <button type="submit" class="btn btn-primary btn-block">Update</button>
                     </div>
                 </div>
             </form>
