--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -63,7 +63,7 @@
             <h1 class="page-header">Forms</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" ><a href="forms.html">Forms</a></li>
-                <li role="presentation" class="active"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation" class="active"><a href="fields.html">Fields</a></li>
             </ul>
 
             <form class="form-horizontal">
