--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -63,7 +63,7 @@
             <h1 class="page-header">Forms</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" class="active"><a href="forms.html">Forms</a></li>
-                <li role="presentation"><a href="form-fields.html">Fields</a></li>
+                <li role="presentation"><a href="fields.html">Fields</a></li>
             </ul>
             <div class="table-responsive">
             <table class="table table-striped table-bordered">
