rectified small errors

--- a/public/assignment/admin.html
+++ b/public/assignment/admin.html
@@ -33,7 +33,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Form Maker</a>
+            <a class="navbar-brand" href="home.html">Form Maker</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
@@ -65,9 +65,12 @@
             <table class="table table-stripped table-bordered">
                 <thead>
                 <tr>
-                    <th>UserName</th>
-                    <th>Password</th>
-                    <th>Role</th>
+                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                    UserName</th>
+                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                        Password</th>
+                    <th><a href="#"><span class="glyphicon glyphicon-triangle-bottom"></span></a>
+                        Role</th>
                     <th style="white-space: nowrap">Action</th>
 
                 </tr>
@@ -89,8 +92,8 @@
                 </tr>
                 <tr>
                     <td>Alice</td>
-                    <td>Wonderland</td>
-                    <td>User</td>
+                    <td></td>
+                    <td>Student</td>
                     <td style="white-space: nowrap">
                         <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
@@ -102,8 +105,8 @@
                 </tr>
                 <tr>
                     <td>Bob</td>
-                    <td>Marley</td>
-                    <td>Admin</td>
+                    <td></td>
+                    <td>Faculty | Admin</td>
                     <td style="white-space: nowrap">
                         <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
@@ -115,8 +118,8 @@
                 </tr>
                 <tr>
                     <td>Charlie</td>
-                    <td>Steele</td>
-                    <td>Faculty</td>
+                    <td></td>
+                    <td></td>
                     <td style="white-space: nowrap">
                         <a href="#" class="btn btn-warning">
                             <scan class="glyphicon glyphicon-pencil"></scan>
@@ -126,19 +129,7 @@
                         </a>
                     </td>
                 </tr>
-                <tr>
-                    <td>Danny</td>
-                    <td>Boyle</td>
-                    <td>Student</td>
-                    <td style="white-space: nowrap">
-                        <a href="#" class="btn btn-warning">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-danger">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
+
                 </tbody>
             </table>
             </div>
