--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -51,7 +51,7 @@
     <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
             <ul class="nav nav-sidebar">
-                <li><a href="#">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="profile.html">Profile</a></li>
                 <li><a href="admin.html">Admin</a></li>
                 <li class="active"><a href="forms.html">Forms</a></li>
