hyperlink added to fields page

--- a/public/assignment/forms.html
+++ b/public/assignment/forms.html
@@ -88,7 +88,18 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Registration Form</td>
+                    <td> <a href="fields.html"> Registration Form</a></td>
+                    <td>
+                        <a href="#" class="btn btn-success">
+                            <scan class="glyphicon glyphicon-pencil"></scan>
+                        </a>
+                        <a href="#" class="btn btn-primary">
+                            <scan class="glyphicon glyphicon-remove"></scan>
+                        </a>
+                    </td>
+                </tr>
+
+                    <td><a href="fields.html"> Contact List</a></td>
                     <td>
                         <a href="#" class="btn btn-success">
                             <scan class="glyphicon glyphicon-pencil"></scan>
@@ -99,18 +110,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Contact List</td>
-                    <td>
-                        <a href="#" class="btn btn-success">
-                            <scan class="glyphicon glyphicon-pencil"></scan>
-                        </a>
-                        <a href="#" class="btn btn-primary">
-                            <scan class="glyphicon glyphicon-remove"></scan>
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>To Do List</td>
+                    <td><a href="fields.html">To Do List</a></td>
                     <td>
                         <a href="#" class="btn btn-success">
                             <scan class="glyphicon glyphicon-pencil"></scan>
