no wrap added to buttons

--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -60,6 +60,7 @@
         </div>
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+            <div class="row">
             <h1 class="page-header">Forms</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" ><a href="forms.html">Forms</a></li>
@@ -74,7 +75,7 @@
                     <label for="inputfirstname">First Name:</label></div>
                 <div class="col-sm-12">
                         <input type="text"  id="inputfirstname" placeholder="First Name">
-                         <div class="pull-right">
+                         <div class="pull-right text-nowrap">
                          <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                          <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                          <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -89,7 +90,7 @@
                     <label for="inputlastname">Last Name:</label></div>
                     <div class="col-sm-12">
                         <input type="text"  id="inputlastname" placeholder="Last Name">
-                        <div class= "pull-right">
+                        <div class="pull-right text-nowrap">
                             <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                             <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -104,7 +105,7 @@
                     <label for="inputdob">Date of Birth:</label></div>
                     <div class="col-sm-12">
                         <input type="date"  id="inputdob">
-                        <div class="pull-right">
+                        <div class="pull-right text-nowrap">
                             <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                             <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -121,7 +122,7 @@
                             <option value="Female">Female</option>
                             <option value="Male">Male</option>
                         </select>
-                        <div class="pull-right">
+                        <div class="pull-right text-nowrap">
                             <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                             <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -136,7 +137,7 @@
 
                     <div class="col-sm-12">
                         <label><input type="checkbox" name="role"/>User</label>
-                        <div class="pull-right">
+                        <div class="pull-right text-nowrap">
                             <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                             <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -159,7 +160,7 @@
                     <div class="col-sm-12">
                         <input id="yes" type="radio" name="license"/> <label for="yes">Yes</label>
                         <label><input type="radio" name="license"/> No</label>
-                        <div class="pull-right">
+                        <div class="pull-right text-nowrap">
                             <span class="glyphicon glyphicon-pencil btn btn-success"></span>
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                             <span class="glyphicon glyphicon-remove btn btn-danger"></span>
@@ -181,7 +182,7 @@
                             <option name="radio">Radio Button</option>
                             <option name="paragraph">Paragraph</option>
                         </select>
-                        <div class="pull-right">
+                        <div class="pull-right text-nowrap">
 
                             <span class="glyphicon glyphicon-plus btn btn-primary"></span>
                          </div>
