--- a/public/assignment/fields.html
+++ b/public/assignment/fields.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Fields</title>
+    <title>Fields- FormMaker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
@@ -61,7 +61,7 @@
 
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
             <div class="row">
-            <h1 class="page-header">Forms</h1>
+            <h1 class="page-header">Forms - Registration Form</h1>
             <ul class="nav nav-tabs">
                 <li role="presentation" ><a href="forms.html">Forms</a></li>
                 <li role="presentation" class="active"><a href="fields.html">Fields</a></li>
