--- a/public/assignment/register.html
+++ b/public/assignment/register.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
 
-    <title>Register</title>
+    <title>Register - FormMaker</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
