project proposal link added

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#">DOCUMENTATION</a>
+                        <a class="page-scroll" href="https://drive.google.com/file/d/0B5Px7SrDiPnGN2N6MGdqUVRMb2M/view?usp=sharing">PROJECT PROPOSAL</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/assignment/home.html">ASSIGNMENTS</a>
